--- a/extra_model_paths.yaml
+++ b/extra_model_paths.yaml
@@ -1,37 +1,36 @@
 # ComfyUI 额外模型路径配置
-# 让 ComfyUI 在多个目录中搜索模型
+# 从 HuggingFace 缓存加载模型
 
+# 默认 ComfyUI 模型目录
 comfyui:
     base_path: /comfyui/models
-    
-    # VAE 模型
-    vae: 
+
+# HuggingFace 缓存的模型 (运行时由启动脚本设置 HF_MODELS_PATH 环境变量)
+hf_cache:
+    base_path: /runpod-volume/hf-models
+
+    vae:
         - vae
-    
-    # 主模型 (diffusion_models/wan/ 路径)
-    diffusion_models: 
+
+    diffusion_models:
         - diffusion_models
-        - unet
-    
-    # LoRA 模型
+
     loras:
         - loras
-        - loras/wan
-    
-    # CLIP 模型
+
     clip:
         - clip
         - text_encoders
-    
-    # CLIP Vision 模型  
+
     clip_vision:
         - clip_vision
         - clip
-    
-    # SAM 模型
+
     sams:
         - sams
-    
-    # 检测模型
+
     onnx:
         - detection
+
+    ultralytics:
+        - ultralytics
